--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body onload="initInfo(); loadTagList()">
+  <body onload="initInfo(); loadTagList(); loadNoteList()">
     <div class="wrapper">
       <header>
         <div class="header-title">
