pin note, update task number

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <h3 id="time">18:15</h3>
             </div>
             <div class="tasks-info">
-              <p>You have <span>3</span> tasks</p>
+              <p>You have <span class="task-number">3</span><span class="tasks"></span></p>
             </div>
           </div>
           <div class="add-task">
@@ -101,7 +101,7 @@
         <div class="modal-tags-container">
           <!--  Динамический вывод тегов -->
         </div>
-        <button class="add-btn">save new note</button>
+        <button id="add-note-btn" class="add-btn">save new note</button>
       </div>
     </div>
     <div id="modal-overlay"></div>
