--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="modal-tags-container">
           <!--  Динамический вывод тегов -->
         </div>
-        <button id="add-note-btn" class="add-btn">save new note</button>
+        <button type="submit" id="add-note-btn" class="add-btn">save new note</button>
       </div>
     </div>
     <div id="modal-overlay"></div>
