--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           rows="7"
           placeholder="Note..."
         ></textarea>
+        <div class="remaining-symbols">300 characters remaining</div>
         <div class="modal-tags-container">
           <!--  Динамический вывод тегов -->
         </div>
