add loading, fix dark mode behavior

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
               id="dark-mode-checkbox"
             />
             <label for="dark-mode-checkbox" class="dark-mode-label">
-              <i class="fas fa-moon"></i>
               <i class="fas fa-sun"></i>
+              <i class="fas fa-moon"></i>
               <div class="switch-circle"></div>
             </label>
           </div>
@@ -73,6 +73,7 @@
             </div>
             <div class="tag-list">
               <!--  Динамический вывод тегов -->
+          
             </div>
           </div>
         </div>
@@ -80,6 +81,8 @@
         <!-- Notes -->
         <div class="notes">
           <!--  Динамический вывод заметок -->
+          <div class="note skeleton skeleton-box"></div>
+          <div class="note skeleton skeleton-box"></div>
         </div>
       </main>
     </div>
